# cloud-analytics

./: .coveragerc  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  setup.cfg  tox.ini
analytics/: README.md  azure_autoscaling_threshold_exceeded.yml  azure_correlation_guest_priv_esc_then_storage_public.yml  azure_guest_user_priv_escalation.yml  azure_mfa_denies.yml  azure_mfa_disabled.yml  azure_mfa_failure_threshold_exceeded.yml  azure_role_elevated_outside_pim.yml  azure_service_principal_priv_escalation.yml  azure_storage_container_modified_for_public_access.yml  cloud_analytics_sigma_rules_heatmap.json  create_azure_sp.md  gcp_autoscaling_threshold_exceeded.yml  gcp_correlation_user_added_priv_group_then_gcp_storage_modified.yml  gcp_mfa_disabled.yml  gcp_mfa_failure_threshold_exceeded.yml  gcp_perms_granted_over_service_acct.yml  gcp_service_principal_priv_escalation.yml  gcp_ssh_key_added.yml  gcp_storage_container_modified_for_public_access.yml  gcp_violate_vpc_controls_storage_bucket.yml  gworkspace_suspicious_login.yml  gworkspace_user_added_priv_group.yml
build-support/: build.sh
demo/: Vagrantfile  azure_storage_container_modified_for_public_access.yml  caldera.service  caldera.sh  gcp_storage_container_modified_for_public_access.yml  storage-access-log-sample.json
docs/: Cloud_TTPs_to_Attack_Mappings.xlsx  README.md  SigmaRuleUsage.md  Using Cloud Analytics with Caldera.md
emulation/: README.md  Using_Cloud_Analytics_with_Caldera.md
requirements/: test-requirements.txt
support/: README.md
tests/: test_check_palindrome.py
(+43 files in other folders)
