[metadata]
name = cloud-analytics
version = 0.1
description =  Helps defenders detect attacks to their cloud infrastructure
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/center-for-threat-informed-defense/cloud-analytics

[flake8]
max-line-length = 110
extend-ignore = E203
