[metadata]
name = cloud-analytics
version = 0.1
description =  Helps defenders detect attacks to their cloud infrastructure
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/center-for-threat-informed-defense/cloud-analytics

[flake8]
max-line-length = 110
max-complexity = 20
extend-ignore = E203
exclude =
    # No need to traverse our git directory
    .git,
    # No value in checking cache directories
    __pycache__,
    # No need to check virtualenv
    .venv,
    # No need to check tox dir
    .tox
